// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Component Tests Matches Mounted SnapShot 1`] = `
<GridContainerSuccessTest>
  <GridContainer
    className=""
    strict={false}
  >
    <div
      className="nwc-grid-container  "
    >
      <GridRow
        className=""
      >
        <div
          className="nwc-grid-row "
        >
          <GridColumn
            className=""
          >
            <div
              className="nwc-grid-col "
            >
              Hello
            </div>
          </GridColumn>
        </div>
      </GridRow>
    </div>
  </GridContainer>
</GridContainerSuccessTest>
`;

exports[`Root Component Tests Matches Mounted SnapShot 2`] = `
<GridContainerErrorTest>
  <GridContainer
    className=""
    strict={false}
  >
    <div
      className="nwc-grid-container  "
    >
      <div>
        Hello
      </div>
    </div>
  </GridContainer>
</GridContainerErrorTest>
`;

exports[`Root Component Tests Matches Shallow SnapShot 1`] = `
<GridContainer
  className=""
  strict={false}
>
  <GridRow
    className=""
  >
    <GridColumn
      className=""
    >
      Hello
    </GridColumn>
  </GridRow>
</GridContainer>
`;

exports[`Root Component Tests Matches Shallow SnapShot 2`] = `
<GridContainer
  className=""
  strict={false}
>
  <div>
    Hello
  </div>
</GridContainer>
`;
